<resources>
    <string name="app_name">GCS</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log In</string>
    <string name="front_login">User Login</string>
    <string name="front_phone_login">Login With Phone</string>
    <string name="hint_phone">phone number</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="get_code_phone">Get Code</string>
    <string name="delete">Delete</string>
    <string name="hint_code">code</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="min_password_label">Password Length Should Be >= 6</string>
    <string name="send_text">Send</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_exists">User Already Exists</string>
    <string name="sign_up_failed">Sign Up Failed</string>
    <string name="hint_password">password</string>
    <string name="email_password_reset">Password Reset Email Sent</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="reset">Reset Password</string>
    <string name="wrong_credentials">Wrong Credentials</string>
    <string name="user_not_found">User Not Found</string>
    <string name="sign_in_failed">Sign In Failed</string>
    <string name="reset_failed">Reset Failed</string>
    <string name="resend_code">Resend Code</string>
    <string name="email_verification">Check Your Email for Verification</string>
    <string name="verify_email">Verify Email Id</string>
    <string name="heading_all">All Posts</string>
    <string name="heading_your_posts">Your Posts</string>
    <string name="heading_your_top_posts">Your Trending Posts</string>
    <string name="quota">Quota exceeded</string>
    <string name="failed_load">Failed to load </string>
    <string name="delete_success">Deleted Successfully</string>
    <string name="default_string">default</string>
</resources>
