<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.nikhil.gcsapp.SignInActivity">


        <TextView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/front_login"
            android:textColor="#000"
            android:textSize="20dp"
            android:hint="df"/>

        <LinearLayout
            android:id="@+id/layout_email_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_email_password"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />


            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_buttons"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_reset"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

        </LinearLayout>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>